Replacing gorm with sqlc

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
+# Application Configuration
+APP_NAME=go-boilerplate
+APP_ENV=development # development, staging, production
+APP_DEBUG=true
+
 # Server Configuration
-PORT=8080
+HTTP_PORT=8080
 GRPC_PORT=50051
+SHUTDOWN_TIMEOUT=30s
 
 # Database Configuration
 DB_HOST=localhost
@@ -9,13 +15,41 @@ DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=messagedb
 DB_SSLMODE=disable
+DB_MAX_OPEN_CONNS=25
+DB_MAX_IDLE_CONNS=5
+DB_CONN_MAX_LIFETIME=15m
 
 # Redis Configuration
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=
 REDIS_DB=0
+REDIS_MAX_RETRIES=3
+REDIS_MIN_RETRY_BACKOFF=8ms
+REDIS_MAX_RETRY_BACKOFF=512ms
+REDIS_DIAL_TIMEOUT=5s
+REDIS_READ_TIMEOUT=3s
+REDIS_WRITE_TIMEOUT=3s
 
 # Kafka Configuration
 KAFKA_BROKERS=localhost:9092
-KAFKA_TOPIC=message-events
+KAFKA_TOPIC_PREFIX=go-boilerplate
+KAFKA_MESSAGE_TOPIC=messages
+KAFKA_CONSUMER_GROUP=go-boilerplate-consumer
+KAFKA_PRODUCER_MAX_RETRIES=3
+KAFKA_PRODUCER_TIMEOUT=10s
+KAFKA_CONSUMER_SESSION_TIMEOUT=10s
+
+# Logging Configuration
+LOG_LEVEL=debug # debug, info, warn, error
+LOG_FORMAT=json # json, console
+
+# API Configuration
+API_RATE_LIMIT=100 # requests per minute
+API_TIMEOUT=30s
+API_MAX_PAGE_SIZE=100
+
+# Security Configuration
+JWT_SECRET=your-secret-key
+JWT_EXPIRY=24h
+BCRYPT_COST=10
